Refactor of application (#8)
* Cleanup

* Removed email marker

* Cleanups

* Cleanups

* Cleanups

* Cleanups

* Remove dependencies that are vulnerable and not used

* Removed not needed gps location classes

* Further cleanups

* Add modernizer plugin and fix some of the problems reported

* Spotless apply

* Spotless apply

* Cleanups

* Enable hibernate pool

* Cleanups and improve docker run

* Enable build of refactor branch

* Update workflow file

* Revert wrong exclusion from equals computation

* Revert wrong exclusion from equals computation

* Cleanup getDirectionIds Route method